syntax = "proto3";
package admin;
option go_package = "./admin_proto;admin_proto";
import "common.proto";
import "admin_model.proto";

// 账号列表请求参数
message ReqAdminUserList{
  ReqListBase base = 1;
  string username = 2;//账号
  string nickname = 3;//昵称
  string email = 4; //邮箱
  int32 enabled = 5; // 0全部，1启用，2禁用
  repeated int32 roleIds = 6;// 角色ID
}
message RespAdminUserListData{
  int64 total = 1;
  int32 pageNum = 2;
  int32 pageSize = 3;
  repeated AdminUserListItem list = 4;
}

// 账号详情
message ReqAdminUserInfo{
  int32 adminId = 1; // @gotags: label:"管理员ID" binding:"required,min=1"`
}
message RespAdminUserInfoData{
  AdminMenuModel data = 1;
}


// 添加账号
message ReqAdminUserAdd{
  string username = 1;// @gotags: label:"账号" binding:"required,adminname"`
  string nickname = 2; // @gotags: label:"昵称" binding:"required,trimBlank"`
  string password = 3;// @gotags: label:"密码" binding:"required,adminpwd"`
  string confirmPassword = 4; // @gotags: label:"确认密码" binding:"required,eqfield=Password,adminpwd"
  bool enabled = 5;  // @gotags: label:"账号启用状态"
  string email = 6; // @gotags: label:"邮箱" binding:"omitempty,email"
  string avatar = 7; // @gotags: label:"头像地址" binding:"omitempty,url"
}
message RespAdminUserAddData{
}

// 账号编辑
message ReqAdminUserEdit{
  int32 adminId = 1;//管理员ID @gotags: label:"管理员ID" binding:"required,min=1"
  string username = 2;//账号 @gotags: label:"账号" binding:"required,adminname"
  string nickname = 3;//昵称 @gotags: label:"昵称" binding:"required,trimBlank"
  bool enabled = 4;//账号启用状态 @gotags: label:"账号启用状态"
  string email = 5;//邮箱 @gotags: label:"邮箱" binding:"omitempty,email"
  string avatar = 6;//头像地址 @gotags: label:"头像地址" binding:"omitempty,url"
}
message RespAdminUserEditData{
}

// 账号编辑
message ReqAdminUserEditPassword{
  int32 adminId = 1;//管理员ID @gotags: label:"管理员ID" binding:"required,min=1"
  string password = 2;//密码 @gotags: label:"密码" binding:"required,adminpwd"
  string confirmPassword = 3;//确认密码 @gotags: label:"确认密码" binding:"required,eqfield=Password,adminpwd"
}
message RespAdminUserEditPasswordData{
}

// 账号状态更改
message ReqAdminUserEnabled{
  int32 adminId = 1;//管理员ID @gotags: label:"管理员ID" binding:"required,min=1"
  bool enabled = 2;//账号启用状态 @gotags: label:"账号启用状态"
}
message RespAdminUserEnabledData{
}

// 删除账号
message ReqAdminUserDelete{
  int32 adminId = 1;//管理员ID @gotags: label:"管理员ID" binding:"required,min=1"
}
message RespAdminUserDeleteData{
}

// 账号绑定角色
message ReqAdminUserBindRoles{
  int32 adminId = 1;//管理员ID @gotags: label:"管理员ID" binding:"required,min=1"
  repeated int32 roleIds = 2;//角色ID列表 @gotags: label:"角色ID列表" binding:"required,min=1"
}
message RespAdminUserBindRolesData{
}